# serverless-haskell-nix

./: .gitignore  Main.hs  default.nix  lambda.cabal  readme.md
