cabal-version:       >=1.10

name:                lambda
version:             0.1.0.0
maintainer:          fre@freux.fr
build-type:          Simple

executable lambda
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
   aws-lambda-runtime -any,
   protolude -any,
   base -any,
   bytestring -any,
   lens-aeson -any,
   text -any,
   lens -any,
   aeson -any
  default-extensions: LambdaCase QuasiQuotes DefaultSignatures
                      OverloadedLists ExistentialQuantification RecordWildCards
                      RankNTypes TypeSynonymInstances StandaloneDeriving
                      FlexibleInstances TupleSections MultiParamTypeClasses
                      NoImplicitPrelude OverloadedStrings ViewPatterns PatternSynonyms
                      DeriveFunctor DeriveTraversable TypeFamilies DeriveAnyClass
                      DeriveGeneric DeriveDataTypeable OverloadedLabels DeriveFoldable
                      DerivingStrategies TypeApplications MultiWayIf NoTemplateHaskell
                      BlockArguments GADTs FlexibleContexts TypeOperators DataKinds
                      PolyKinds AllowAmbiguousTypes FunctionalDependencies
                      UndecidableInstances CPP GeneralizedNewtypeDeriving
  ghc-options: -Wall -O0 -Wcompat -Wincomplete-uni-patterns
               -Wmissing-home-modules -Widentities -Wredundant-constraints
               -Wcpp-undef -fwarn-tabs -fwarn-unused-imports
               -fwarn-missing-signatures -fwarn-name-shadowing
               -fprint-potential-instances -Wmissing-export-lists
               -fwarn-unused-do-bind -fwarn-wrong-do-bind
               -fwarn-incomplete-patterns -Wincomplete-record-updates
               -Wmonomorphism-restriction -Wimplicit-prelude
               -Wmissing-local-signatures -Wmissing-exported-signatures
               -Wmissing-export-lists -Wmissing-home-modules -Widentities
               -Wredundant-constraints -Wpartial-fields

