cabal-version:       >=1.10

name:                lambda
version:             0.1.0.0
maintainer:          fre@freux.fr
build-type:          Simple

executable lambda
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
   aws-lambda-runtime -any,
   protolude -any,
   base -any,
   bytestring -any,
   lens-aeson -any,
   text -any,
   lens -any,
   aeson -any
  default-extensions: NoImplicitPrelude
